<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CommonActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:gravity="center"
        android:text="@string/Main_title"
        android:textColor="@color/blue"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtUnitType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainTitle"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="@string/selectUnitType"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/relativeLUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUnitType"
        android:layout_marginHorizontal="@dimen/_16sdp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/selectUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_details"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLUnit">

         <TextView
            android:id="@+id/txtFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="10dp"
            android:text="@string/from"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/_50sdp"
            android:text="@string/To"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

         <LinearLayout
            android:id="@+id/LinearL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtFrom"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:id="@+id/relativeLFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/bg_details">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/S_UnitFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:paddingEnd="20dp"
                    android:ellipsize="end"
                    android:textSize="@dimen/_14sdp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/down_arrow" />
            </RelativeLayout>

             <RelativeLayout
                android:id="@+id/relativeLTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/bg_details">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/S_UnitTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:paddingEnd="20dp"
                    android:ellipsize="end"
                    android:textSize="@dimen/_14sdp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/down_arrow" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/txtEnterV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainRelative"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="10dp"
        android:text="@string/enterValue"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enterValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEnterV"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_details"
        android:hint="@string/enterValue"
        android:inputType="number"
        android:padding="12dp"
        android:textSize="24sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ClickConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterValue"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:padding="12dp"
        android:text="@string/convert"
        android:textSize="@dimen/_15sdp"
        app:cornerRadius="10dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/showAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_ClickConvert"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:textSize="@dimen/_18sdp" />

</RelativeLayout>
